--- a/MyERC20/package.json
+++ b/MyERC20/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
     "dotenv": "^16.3.1",
+    "hardhat-contract-sizer": "^2.10.0",
     "hardhat-ethers": "^1.0.1"
   },
   "devDependencies": {
