set up uniswap contracts

--- a/Uniswap/package.json
+++ b/Uniswap/package.json
@@ -11,6 +11,12 @@
     "monitor": "npx hardhat run scripts/monitor.ts --network sepolia",
     "test": "npx hardhat run scripts/test.ts --network sepolia"
   },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.0.1",
+    "dotenv": "^16.3.1",
+    "hardhat-contract-sizer": "^2.10.0",
+    "hardhat-ethers": "^1.0.1"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
