--- a/Uniswap/package.json
+++ b/Uniswap/package.json
@@ -7,9 +7,7 @@
   "license": "MIT",
   "scripts": {
     "compile": "npx hardhat compile",
-    "deploy": "npx hardhat run scripts/deploy.ts --network sepolia",
-    "monitor": "npx hardhat run scripts/monitor.ts --network sepolia",
-    "test": "npx hardhat run scripts/test.ts --network sepolia"
+    "basic-test": "npx hardhat run scripts/basicTest.ts --network sepolia"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
