--- a/Uniswap/package.json
+++ b/Uniswap/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "compile": "npx hardhat compile",
-    "basic-test": "npx hardhat run scripts/runBasicTest.ts --network sepolia"
+    "basic-test": "npx hardhat run scripts/runBasicTest.ts --network sepolia",
+    "arb-test": "npx hardhat run scripts/runArbTest.ts --network sepolia"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
